changed background and fixed spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -5,29 +5,31 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Poppins', sans-serif;
-  height: auto;
-  background: #bdc3c7; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to bottom,
-    #2c3e50,
-    #bdc3c7
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to bottom, #2c3e50, #bdc3c7);
+  height: 100%;
   color: black;
+}
+
+body {
+  height: 100%;
+  background-color: rgb(192, 191, 191);
 }
 * {
   box-sizing: border-box;
 }
 h1 {
-  color: white;
   text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
 }
 p {
   text-align: center;
+  padding: 1em;
 }
 img {
   display: block;
   margin: 0 auto;
+  border: 2px solid #fff;
+  border-radius: 10% 10%;
 }
 #home-image {
   width: 450px;
@@ -40,12 +42,13 @@ img {
 .home-list {
   text-align: center;
   list-style-type: none;
+  padding: 1em;
 }
 .home-list li {
   margin-bottom: 5px;
 }
 h2 {
-  margin-left: 10px;
+  padding: 0 1em 0 1em;
 }
 a {
   font-size: 20px;
@@ -54,6 +57,8 @@ a {
   text-decoration: none;
   border: 1px solid white;
   box-shadow: 0 0 10px;
+  border-radius: 0.5em 0.5em;
+  padding: 0 1em 0 1em;
 }
 a:hover {
   background: black;
